improve source codes

--- a/overlay-rx.conf
+++ b/overlay-rx.conf
@@ -10,8 +10,10 @@ CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_MODE_AP=y
 
 # Wi-Fi credentials for external AP
 CONFIG_WIFI_CREDENTIALS_STATIC=y
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
-CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
+#CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
+#CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="TP-Matter"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="BillionMatter2025"
 
 # Enable Wi-Fi ready library for proper initialization
 CONFIG_WIFI_READY_LIB=y
