--- a/overlay-rx-softap.conf
+++ b/overlay-rx-softap.conf
@@ -8,9 +8,13 @@
 CONFIG_WIFI_UDP_PACKET_LATENCY_DEVICE_ROLE_RX=y
 CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_MODE_SOFTAP=y
 
+#CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
+#CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="TP-Matter"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="BillionMatter2025"
 # SoftAP configuration
-CONFIG_WIFI_UDP_PACKET_LATENCY_SOFTAP_SSID="wifi-latency-test"
-CONFIG_WIFI_UDP_PACKET_LATENCY_SOFTAP_PSK="testpass123"
+# CONFIG_WIFI_UDP_PACKET_LATENCY_SOFTAP_SSID="wifi-latency-test"
+# CONFIG_WIFI_UDP_PACKET_LATENCY_SOFTAP_PSK="testpass123"
 
 # Test parameters
 CONFIG_WIFI_UDP_PACKET_LATENCY_UDP_PORT=12345
