--- a/overlay-tx.conf
+++ b/overlay-tx.conf
@@ -7,11 +7,20 @@
 # Device role configuration
 CONFIG_WIFI_UDP_PACKET_LATENCY_DEVICE_ROLE_TX=y
 
-# Wi-Fi credentials for external AP (used in Test 1)
-# For Test 2, these are ignored as device connects to SoftAP
+# Wi-Fi credentials for external AP
 CONFIG_WIFI_CREDENTIALS_STATIC=y
 CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
 CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
+
+# Wi-Fi credentials for softAP
+# CONFIG_WIFI_CREDENTIALS_STATIC_SSID="wifi-latency-test"
+# CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="testpass123"
+# CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.1"  # RX device IP
+
+# Target IP address (adjust based on test mode)
+# For Test 1: IP of RX device on same network
+# For Test 2: IP of SoftAP (192.168.1.1)
+CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.100"
 
 # Enable Wi-Fi ready library for proper initialization
 CONFIG_WIFI_READY_LIB=y
@@ -19,12 +28,9 @@ CONFIG_WIFI_READY_LIB=y
 # Test parameters
 CONFIG_WIFI_UDP_PACKET_LATENCY_UDP_PORT=12345
 CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_DURATION_MS=10000
-CONFIG_WIFI_UDP_PACKET_LATENCY_PACKET_INTERVAL_MS=500
+CONFIG_WIFI_UDP_PACKET_LATENCY_PACKET_INTERVAL_MS=1000
 
-# Target IP address (adjust based on test mode)
-# For Test 1: IP of RX device on same network
-# For Test 2: IP of SoftAP (typically 192.168.1.1)
-CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.100"
+
 
 # Optimize for TX operations
 CONFIG_MAIN_STACK_SIZE=8192
