--- a/prj.conf
+++ b/prj.conf
@@ -4,9 +4,14 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
+
+# Disable Wi-Fi Power Management (Critical for low latency)
+CONFIG_NRF_WIFI_LOW_POWER=n
+
 # General
 CONFIG_ASSERT=y
 CONFIG_LOG=y
+CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_MAIN_STACK_SIZE=6144
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 CONFIG_POSIX_API=y
@@ -66,7 +71,4 @@ CONFIG_DEBUG_COREDUMP=n
 CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=n
 CONFIG_DEBUG_COREDUMP_MEMORY_DUMP_MIN=n
 
-# Application-specific configs
-CONFIG_WIFI_UDP_PACKET_LATENCY_UDP_PORT=12345
-CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_DURATION_MS=10000
-CONFIG_WIFI_UDP_PACKET_LATENCY_PACKET_INTERVAL_MS=500 
+
