--- a/overlay-rx.conf
+++ b/overlay-rx.conf
@@ -1,38 +1,20 @@
 #
-# Configuration overlay for UDP RX Device - Test 1
-# Both devices connect to external AP
-# This device receives UDP packets and triggers LED2 GPIO
+# Copyright (c) 2025 Nordic Semiconductor ASA
+#
+# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-# Device role and test mode
+
+# - -UDP Packet Latency Test Configuration: RX Device START
 CONFIG_WIFI_UDP_PACKET_LATENCY_DEVICE_ROLE_RX=y
 CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_MODE_AP=y
+# --UDP Packet Latency Test Configuration: RX Device END
 
+# -Device Drivers START
+# --Wi-Fi drivers START
 # Wi-Fi credentials for external AP
 CONFIG_WIFI_CREDENTIALS_STATIC=y
-#CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
-#CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="TP-Matter"
-CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="BillionMatter2025"
-
-# Enable Wi-Fi ready library for proper initialization
-CONFIG_WIFI_READY_LIB=y
-
-# Test parameters
-CONFIG_WIFI_UDP_PACKET_LATENCY_UDP_PORT=12345
-
-# Optimize for RX operations
-CONFIG_MAIN_STACK_SIZE=8192
-CONFIG_NET_RX_STACK_SIZE=4096
-
-# Enhanced connectivity timeout for reliable connection
-CONFIG_NET_SOCKETS_CONNECT_TIMEOUT=60000
-
-# LED GPIO optimization for precise timing measurements
-CONFIG_GPIO=y
-
-# Optional: Static IP configuration
-# Uncomment and configure if you want to set a static IP for RX device
-# CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.100"
-# CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
-# CONFIG_NET_CONFIG_MY_IPV4_GW="192.168.1.1"
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
+# --Wi-Fi drivers END
+# -Device Drivers START
