--- a/overlay-tx.conf
+++ b/overlay-tx.conf
@@ -1,43 +1,27 @@
 #
-# Configuration overlay for UDP TX Device
-# Can be used for both Test 1 (external AP) and Test 2 (connect to SoftAP)
-# This device transmits UDP packets and triggers LED1 GPIO
+# Copyright (c) 2025 Nordic Semiconductor ASA
+#
+# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-# Device role configuration
+
+# --UDP Packet Latency Test Configuration: TX Device START
 CONFIG_WIFI_UDP_PACKET_LATENCY_DEVICE_ROLE_TX=y
-
-# Wi-Fi credentials for external AP
-CONFIG_WIFI_CREDENTIALS_STATIC=y
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
-CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
-
-# Wi-Fi credentials for softAP
-# CONFIG_WIFI_CREDENTIALS_STATIC_SSID="wifi-latency-test"
-# CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="testpass123"
-# CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.1"  # RX device IP
-
-# Target IP address (adjust based on test mode)
-# For Test 1: IP of RX device on same network
-# For Test 2: IP of SoftAP (192.168.1.1)
-CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.100"
-
-# Enable Wi-Fi ready library for proper initialization
-CONFIG_WIFI_READY_LIB=y
-
-# Test parameters
-CONFIG_WIFI_UDP_PACKET_LATENCY_UDP_PORT=12345
 CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_DURATION_MS=10000
 CONFIG_WIFI_UDP_PACKET_LATENCY_PACKET_INTERVAL_MS=1000
+CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.1"
+# --UDP Packet Latency Test Configuration: TX Device END
 
 
-
-# Optimize for TX operations
-CONFIG_MAIN_STACK_SIZE=8192
-CONFIG_NET_TX_STACK_SIZE=4096
-
-# Enhanced connectivity timeout for reliable connection
-CONFIG_NET_SOCKETS_CONNECT_TIMEOUT=60000
-
-# LED GPIO optimization for precise timing measurements
-CONFIG_GPIO=y 
+# -Device Drivers START
+# --Wi-Fi drivers START
+CONFIG_WIFI_CREDENTIALS_STATIC=y
+#For Test 1: IP of RX device on same network
+# CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
+# CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
+# CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.100"
+#For Test 2: IP of SoftAP (192.168.1.1)
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="wifi-latency-test"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="testpass123"
+# --Wi-Fi drivers END
+# -Device Drivers START
