--- a/prj.conf
+++ b/prj.conf
@@ -4,71 +4,161 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-
-# Disable Wi-Fi Power Management (Critical for low latency)
-CONFIG_NRF_WIFI_LOW_POWER=n
-
-# General
-CONFIG_ASSERT=y
-CONFIG_LOG=y
-CONFIG_LOG_MODE_IMMEDIATE=y
+# -General Kernel Options START
 CONFIG_MAIN_STACK_SIZE=6144
+CONFIG_THREAD_NAME=y #selected by CONFIG_THREAD_ANALYZER
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
-CONFIG_POSIX_API=y
+# -General Kernel Options END
 
-# Wi-Fi
+
+# -General Architecture Options START
+# --Interrupt Configuration START
+CONFIG_ISR_TABLES_LOCAL_DECLARATION=y #depended by CONFIG_LTO
+# --Interrupt Configuration END
+# -General Architecture Options END
+
+
+# -Device Drivers START
+# --Flash drivers START
+CONFIG_FLASH=y
+# CONFIG_FLASH_PAGE_LAYOUT=y #selected by CONFIG_NVS
+# ---Flash map abstraction module START
+CONFIG_FLASH_MAP=y
+# ---Flash map abstraction module END
+# --Flash drivers END
+# --Wi-Fi drivers START
 CONFIG_WIFI=y
-CONFIG_WIFI_NRF70=y
 CONFIG_WIFI_CREDENTIALS=y
-CONFIG_WIFI_NM_WPA_SUPPLICANT=y
+CONFIG_WIFI_NM_WPA_SUPPLICANT=y #select POSIX_API POSIX_TIMERS NET_SOCKETS
+# ---nRF70 driver START
+# CONFIG_WIFI_NRF70  #default y if DT_HAS_NORDIC_NRF7002_SPI_ENABLED || DT_HAS_NORDIC_NRF7002_QSPI_ENABLED
+# CONFIG_NET_L2_ETHERNET #default y if (!NRF70_RADIO_TEST && !NRF70_OFFLOADED_RAW_TX)
+# CONFIG_NRF_WIFI_CTRL_HEAP_SIZE=20000 #default 20000
+CONFIG_NRF_WIFI_DATA_HEAP_SIZE=54856
+CONFIG_NRF_WIFI_LOW_POWER=n # Critical for socket packet low latency transmission
+CONFIG_NRF70_RX_NUM_BUFS=16
+CONFIG_NRF70_MAX_TX_AGGREGATION=4
+# CONFIG_NRF70_MAX_TX_TOKENS=10 #default 10
+# CONFIG_NRF70_TX_MAX_DATA_SIZE=1600 #default 1600
+# CONFIG_NRF70_RX_MAX_DATA_SIZE=1600 #default 1600
+# CONFIG_MAIN_STACK_SIZE=6144
+# CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+# ----nRF70 driver END
+# --Wi-Fi drivers END
+# -Device Drivers START
 
-# Networking
-CONFIG_NETWORKING=y
-CONFIG_NET_SOCKETS=y
-CONFIG_NET_IPV4=y
-CONFIG_NET_UDP=y
-CONFIG_NET_TCP=y
-CONFIG_NET_DHCPV4=y
-CONFIG_NET_L2_ETHERNET=y
-CONFIG_NET_CONNECTION_MANAGER=y
 
-# Network Management
-CONFIG_NET_MGMT=y
-CONFIG_NET_MGMT_EVENT=y
-CONFIG_NET_MGMT_EVENT_INFO=y
-
-# Extended connection timeout for reliable WiFi connection
-CONFIG_NET_SOCKETS_CONNECT_TIMEOUT=60000
-
-# Zephyr NET Connection Manager Connectivity layer
-CONFIG_L2_WIFI_CONNECTIVITY=y
+# Modules START
+# --Nordic nRF Connect START
+#CONFIG_MAIN_STACK_SIZE= #Multiple definitions
+# ---Subsystems START
+# ----Networking START
+# ----- Application Protocol START
+# ------Wi-Fi Ready Library START
+# CONFIG_WIFI_READY_LIB=y
+# ------Wi-Fi Ready Library END
+# ----- Application Protocol END
+# -----L2 Wi-Fi Connectivity START
+CONFIG_L2_WIFI_CONNECTIVITY=y #depends on NET_CONNECTION_MANAGER select NET_CONNECTION_MANAGER_CONNECTIVITY_WIFI_MGMT
 CONFIG_L2_WIFI_CONNECTIVITY_AUTO_CONNECT=n
 CONFIG_L2_WIFI_CONNECTIVITY_AUTO_DOWN=n
+# -----L2 Wi-Fi Connectivity END
+# ----Networking END
+# ---Subsystems END
+# ---Libraries START
+# ----Button and LED Library for Nordic DKs START
+CONFIG_DK_LIBRARY=y
+# ----Button and LED Library for Nordic DKs END
+# ----Hardware ID START
+CONFIG_HW_ID_LIBRARY=y
+CONFIG_HW_ID_LIBRARY_SOURCE_NET_MAC=y
+# ----Hardware ID END
+# ---Libraries END
+# --Nordic nRF Connect END
+# Modules END
 
-# Network buffers and memory
+
+# -Additional libraries START
+# --Heap and Memory Allocation START
+# CONFIG_SYS_HEAP_LISTENER=y # See usage:https://github.com/chshzh/nordic_wifi_opus_audio_demo/blob/main/wifi_audio/wifi_audio_gateway/main.c
+# CONFIG_SYS_HEAP_RUNTIME_STATS=y
+# --Heap and Memory Allocation END
+# --POSIX API Support START
+# CONFIG_POSIX_API=y #selected by CONFIG_WIFI_NM_WPA_SUPPLICANT
+# CONFIG_POSIX_TIMERS=y #selected by CONFIG_WIFI_NM_WPA_SUPPLICANT
+# --POSIX API Support END
+# -Additional libraries END
+
+# -Subsystems and OS Services START
+# --System Monitoring Options START
+# CONFIG_THREAD_ANALYZER=y #Enable Segger Ozone Support
+# CONFIG_THREAD_ANALYZER_AUTO=y # printk/log periotic thread information
+# CONFIG_THREAD_ANALYZER_AUTO_INTERVAL=10
+# --System Monitoring Options END
+# --Debugging Options START
+CONFIG_STACK_SENTINEL=y
+# --Debugging Options END
+# --File Systems START
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+CONFIG_NVS=y
+# ---Zephyr Memory Storag(ZMS) START
+CONFIG_ZMS=y
+# ---Zephyr Memory Storage(ZMS) END
+# --File Systems END
+# --Logging START
+CONFIG_LOG=y
+CONFIG_LOG_MODE_DEFERRED=y
+# --Logging END
+# --Networking START
+CONFIG_NETWORKING=y
+# ---L2 Link layer START
+# ---L2 Link layer END
+# ---IP Stack START
+CONFIG_NET_IPV4=y
+CONFIG_NET_UDP=y
 CONFIG_NET_PKT_RX_COUNT=8
 CONFIG_NET_PKT_TX_COUNT=8
 CONFIG_NET_BUF_RX_COUNT=8
 CONFIG_NET_BUF_TX_COUNT=16
-CONFIG_NRF70_RX_NUM_BUFS=16
-CONFIG_NRF70_MAX_TX_AGGREGATION=4
-CONFIG_NRF_WIFI_CTRL_HEAP_SIZE=20000
-CONFIG_NRF_WIFI_DATA_HEAP_SIZE=53000
-
-# GPIO and DK library for LED/button support
-CONFIG_DK_LIBRARY=y
-CONFIG_GPIO=y
-
-# Network config
-CONFIG_NET_CONFIG_INIT_TIMEOUT=0
+# ----Network Management START
+# CONFIG_NET_MGMT=y # selected by CONFIG_NET_CONNECTION_MANAGER net_mgmt_*
+# CONFIG_NET_MGMT_EVENT=y # selected by CONFIG_NET_CONNECTION_MANAGER
+# CONFIG_NET_MGMT_EVENT_INFO=y # selected by CONFIG_NET_CONNECTION_MANAGER
+# ----Network Management END
+# ---IP Stack END
+# ---Network Protocols START
+# ---Network Protocols END
+# ---Network Libraries START
+# ----Set network settings for applications START
 CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONTEXT_SYNC_RECV=y
-CONFIG_NET_MAX_CONTEXTS=5
+CONFIG_NET_CONFIG_INIT_TIMEOUT=0
+# ----Set network settings for applications END
+# ----BSD Sockets compatible API START
+# CONFIG_NET_SOCKETS=y
+# ----BSD Sockets compatible API END
+# ---Network Libraries END
+# ---Network additional services START
+# ----Network DHCPv4 START
+CONFIG_NET_DHCPV4=y # DHCPv4 client
+# ----Network DHCPv4 END
+# --Network additional services END
+# ---Network connection manager START
+CONFIG_NET_CONNECTION_MANAGER=y # conn_mgr_*
+# ---Network connection manager END
+# --Networking END
+# --Settings START
+CONFIG_SETTINGS=y
+# CONFIG_SETTINGS_ZMS=y #default SETTINGS_ZMS if ZMS
+# --Settings END
+# --Tracing Support START
+# CONFIG_TRACING=y #Enable Segger Systemview
+# CONFIG_SEGGER_SYSTEMVIEW=y #Enable Segger Systemview
+# CONFIG_TRACING_BACKEND_RAM=y #Enable Segger Systemview
+# --Tracing Support END
+# -Subsystems and OS Services END
 
-# Debugging
-CONFIG_STACK_SENTINEL=y
-CONFIG_DEBUG_COREDUMP=n
-CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=n
-CONFIG_DEBUG_COREDUMP_MEMORY_DUMP_MIN=n
 
-
+# -Build and Link Features START
+CONFIG_LTO=y #depends on !(GEN_ISR_TABLES || GEN_IRQ_VECTOR_TABLE) || ISR_TABLES_LOCAL_DECLARATION
+# -Build and Link Features END
