--- a/overlay-udp-rx-softap.conf
+++ b/overlay-udp-rx-softap.conf
@@ -4,12 +4,12 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-# -UDP Packet Latency Test Configuration: RX+SoftAP Device START
-CONFIG_WIFI_UDP_PACKET_LATENCY_DEVICE_ROLE_RX=y
-CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_MODE_SOFTAP=y
-CONFIG_WIFI_UDP_PACKET_LATENCY_SOFTAP_SSID="wifi-latency-test"
-CONFIG_WIFI_UDP_PACKET_LATENCY_SOFTAP_PSK="testpass123"
-# -UDP Packet Latency Test Configuration: RX+SoftAP Device END
+# -UDP Packet Latency Test Configuration: RX Device on SoftAP Mode START
+CONFIG_WIFI_LATENCY_TEST_DEVICE_ROLE_RX=y
+CONFIG_WIFI_LATENCY_TEST_RX_DEVICE_MODE_SOFTAP=y
+CONFIG_WIFI_LATENCY_TEST_RX_DEVICE_SOFTAP_SSID="wifi-latency-test"
+CONFIG_WIFI_LATENCY_TEST_RX_DEVICE_SOFTAP_PSK="testpass123"
+# -UDP Packet Latency Test Configuration: RX Device on SoftAP Mode END
 
 
 # -Device Drivers START
