--- a/overlay-udp-tx-sta.conf
+++ b/overlay-udp-tx-sta.conf
@@ -5,12 +5,12 @@
 #
 
 
-# --UDP Packet Latency Test Configuration: TX Device START
-CONFIG_WIFI_UDP_PACKET_LATENCY_DEVICE_ROLE_TX=y
-CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_DURATION_MS=10000
-CONFIG_WIFI_UDP_PACKET_LATENCY_PACKET_INTERVAL_MS=1000
-CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.1"
-# --UDP Packet Latency Test Configuration: TX Device END
+# -UDP Packet Latency Test Configuration: TX Device on STA Mode START
+CONFIG_WIFI_LATENCY_TEST_DEVICE_ROLE_TX=y
+CONFIG_WIFI_LATENCY_TEST_DURATION_MS=10000
+CONFIG_WIFI_LATENCY_TEST_INTERVAL_MS=1000
+CONFIG_WIFI_LATENCY_TEST_TARGET_IP="192.168.1.1"
+# -UDP Packet Latency Test Configuration: TX Device on STA Mode END
 
 
 # -Device Drivers START
@@ -19,7 +19,7 @@ CONFIG_WIFI_CREDENTIALS_STATIC=y
 #For Test 1: IP of RX device on same network
 # CONFIG_WIFI_CREDENTIALS_STATIC_SSID="YourWiFiSSID"
 # CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
-# CONFIG_WIFI_UDP_PACKET_LATENCY_TARGET_IP="192.168.1.100"
+# CONFIG_WIFI_LATENCY_TEST_TARGET_IP="192.168.1.100"
 #For Test 2: IP of SoftAP (192.168.1.1)
 CONFIG_WIFI_CREDENTIALS_STATIC_SSID="wifi-latency-test"
 CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="testpass123"
