--- a/overlay-udp-rx-sta.conf
+++ b/overlay-udp-rx-sta.conf
@@ -5,10 +5,10 @@
 #
 
 
-# - -UDP Packet Latency Test Configuration: RX Device START
-CONFIG_WIFI_UDP_PACKET_LATENCY_DEVICE_ROLE_RX=y
-CONFIG_WIFI_UDP_PACKET_LATENCY_TEST_MODE_AP=y
-# --UDP Packet Latency Test Configuration: RX Device END
+# -UDP Packet Latency Test Configuration: RX Device on STA Mode START
+CONFIG_WIFI_LATENCY_TEST_DEVICE_ROLE_RX=y
+CONFIG_WIFI_LATENCY_TEST_RX_DEVICE_MODE_STA=y
+# -UDP Packet Latency Test Configuration: RX Device on STA Mode END
 
 # -Device Drivers START
 # --Wi-Fi drivers START
