Add support for wifi raw packet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,6 @@ target_sources(app PRIVATE
     src/wifi_utils.c
     src/udp_utils.c
     src/led_utils.c
+    src/raw_utils.c
+    src/net_event_mgmt.c
 ) 
