--- a/prj.conf
+++ b/prj.conf
@@ -55,7 +55,7 @@ CONFIG_NRF70_MAX_TX_AGGREGATION=4
 # ----Networking START
 # ----- Application Protocol START
 # ------Wi-Fi Ready Library START
-# CONFIG_WIFI_READY_LIB=y
+# CONFIG_WIFI_READY_LIB=y # replaced by WPA supplicant event check
 # ------Wi-Fi Ready Library END
 # ----- Application Protocol END
 # -----L2 Wi-Fi Connectivity START
