--- a/overlay-udp-rx-softap.conf
+++ b/overlay-udp-rx-softap.conf
@@ -6,9 +6,9 @@
 
 # -UDP Packet Latency Test Configuration: RX Device on SoftAP Mode START
 CONFIG_WIFI_LATENCY_TEST_DEVICE_ROLE_RX=y
-CONFIG_WIFI_LATENCY_TEST_RX_DEVICE_MODE_SOFTAP=y
-CONFIG_WIFI_LATENCY_TEST_RX_DEVICE_SOFTAP_SSID="wifi-latency-test"
-CONFIG_WIFI_LATENCY_TEST_RX_DEVICE_SOFTAP_PSK="testpass123"
+CONFIG_UDP_RX_DEV_MODE_SOFTAP=y
+CONFIG_UDP_RX_DEV_MODE_SOFTAP_SSID="wifi-latency-test"
+CONFIG_UDP_RX_DEV_MODE_SOFTAP_PSK="testpass123"
 # -UDP Packet Latency Test Configuration: RX Device on SoftAP Mode END
 
 
@@ -32,7 +32,7 @@ CONFIG_NRF70_AP_MODE=y
 # ----Networking START
 # ----- Application Protocol START
 # ------Wi-Fi Ready Library START
-CONFIG_WIFI_READY_LIB=y
+# CONFIG_WIFI_READY_LIB=n # replaced by WPA supplicant event check
 # ------Wi-Fi Ready Library END
 # ----- Application Protocol END
 # ----Networking END
