add test branch for workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and Test Wi-Fi Latency Application
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, test-build-workflow ]
   pull_request:
     branches: [ main ]
 
