actions need to wait set-version done

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,7 @@ jobs:
             app-workspace/wifi_latency_test/build/zephyr/zephyr.bin
 
   validate-documentation:
+    needs: set-version
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
@@ -163,6 +164,7 @@ jobs:
           echo "Python script validation passed ✓"
 
   static-analysis:
+    needs: set-version
     runs-on: ubuntu-22.04
     container: ghcr.io/nrfconnect/sdk-nrf-toolchain:${{ needs.set-version.outputs.NCS_VERSION }}
     defaults:
